--- a/labs/lab4 (1).ipynb
+++ b/labs/lab4 (1).ipynb
@@ -26,10 +26,7 @@
    "execution_count": null,
    "id": "bfc1ddc5",
    "metadata": {
-    "id": "bfc1ddc5",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "bfc1ddc5"
    },
    "outputs": [],
    "source": [
@@ -56,10 +53,7 @@
    "execution_count": 1,
    "id": "063a8cb4",
    "metadata": {
-    "id": "063a8cb4",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "063a8cb4"
    },
    "outputs": [
     {
@@ -92,10 +86,7 @@
    "execution_count": 3,
    "id": "35cfbbec",
    "metadata": {
-    "id": "35cfbbec",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "35cfbbec"
    },
    "outputs": [
     {
@@ -137,10 +128,7 @@
    "execution_count": 5,
    "id": "3bed6cb5",
    "metadata": {
-    "id": "3bed6cb5",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "3bed6cb5"
    },
    "outputs": [
     {
@@ -175,10 +163,7 @@
    "execution_count": 11,
    "id": "bb5dbb0f",
    "metadata": {
-    "id": "bb5dbb0f",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "bb5dbb0f"
    },
    "outputs": [
     {
@@ -219,10 +204,7 @@
    "execution_count": 18,
    "id": "13da6459",
    "metadata": {
-    "id": "13da6459",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "13da6459"
    },
    "outputs": [
     {
@@ -262,10 +244,7 @@
    "execution_count": 20,
    "id": "eba0829e",
    "metadata": {
-    "id": "eba0829e",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "eba0829e"
    },
    "outputs": [
     {
@@ -303,10 +282,7 @@
    "execution_count": 27,
    "id": "37cdb68e",
    "metadata": {
-    "id": "37cdb68e",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "37cdb68e"
    },
    "outputs": [
     {
@@ -343,10 +319,7 @@
    "execution_count": null,
    "id": "11b4528c",
    "metadata": {
-    "id": "11b4528c",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "11b4528c"
    },
    "outputs": [],
    "source": []
@@ -370,10 +343,7 @@
    "execution_count": 31,
    "id": "7489fb55",
    "metadata": {
-    "id": "7489fb55",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "7489fb55"
    },
    "outputs": [
     {
@@ -413,10 +383,7 @@
    "execution_count": null,
    "id": "eb9f8e19",
    "metadata": {
-    "id": "eb9f8e19",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "eb9f8e19"
    },
    "outputs": [],
    "source": []
@@ -438,10 +405,7 @@
    "execution_count": 40,
    "id": "6c6a27a9",
    "metadata": {
-    "id": "6c6a27a9",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "6c6a27a9"
    },
    "outputs": [
     {
@@ -490,10 +454,7 @@
    "execution_count": 41,
    "id": "d276920a",
    "metadata": {
-    "id": "d276920a",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "d276920a"
    },
    "outputs": [
     {
@@ -536,10 +497,7 @@
    "execution_count": 42,
    "id": "4ff24fc6",
    "metadata": {
-    "id": "4ff24fc6",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "4ff24fc6"
    },
    "outputs": [
     {
@@ -582,10 +540,7 @@
    "execution_count": 43,
    "id": "df0901f8",
    "metadata": {
-    "id": "df0901f8",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "df0901f8"
    },
    "outputs": [
     {
@@ -620,10 +575,7 @@
    "execution_count": 44,
    "id": "0e03e488",
    "metadata": {
-    "id": "0e03e488",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "0e03e488"
    },
    "outputs": [
     {
@@ -659,10 +611,7 @@
    "execution_count": 46,
    "id": "6859a061",
    "metadata": {
-    "id": "6859a061",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "6859a061"
    },
    "outputs": [
     {
@@ -698,10 +647,7 @@
    "execution_count": 49,
    "id": "64988cac",
    "metadata": {
-    "id": "64988cac",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "64988cac"
    },
    "outputs": [
     {
@@ -741,10 +687,7 @@
    "execution_count": 55,
    "id": "6f186d8a",
    "metadata": {
-    "id": "6f186d8a",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "6f186d8a"
    },
    "outputs": [
     {
@@ -796,10 +739,7 @@
    "execution_count": null,
    "id": "79b11cbc",
    "metadata": {
-    "id": "79b11cbc",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "79b11cbc"
    },
    "outputs": [],
    "source": []
@@ -824,10 +764,7 @@
    "execution_count": 58,
    "id": "cc3198fa",
    "metadata": {
-    "id": "cc3198fa",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "cc3198fa"
    },
    "outputs": [
     {
@@ -871,10 +808,7 @@
    "execution_count": 60,
    "id": "b09c364a",
    "metadata": {
-    "id": "b09c364a",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "b09c364a"
    },
    "outputs": [
     {
@@ -922,10 +856,7 @@
    "execution_count": 64,
    "id": "fc58635c",
    "metadata": {
-    "id": "fc58635c",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "fc58635c"
    },
    "outputs": [
     {
@@ -976,10 +907,7 @@
    "execution_count": 69,
    "id": "651e8bf2",
    "metadata": {
-    "id": "651e8bf2",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "651e8bf2"
    },
    "outputs": [
     {
@@ -1033,10 +961,7 @@
    "execution_count": 73,
    "id": "9f1a4a8d",
    "metadata": {
-    "id": "9f1a4a8d",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "9f1a4a8d"
    },
    "outputs": [
     {
@@ -1090,10 +1015,7 @@
    "execution_count": 74,
    "id": "6231e1e4",
    "metadata": {
-    "id": "6231e1e4",
-    "vscode": {
-     "languageId": "python"
-    }
+    "id": "6231e1e4"
    },
    "outputs": [
     {
@@ -1139,7 +1061,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1153,7 +1075,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
