--- a/labs/lab4 (1).ipynb
+++ b/labs/lab4 (1).ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "beb550f5",
    "metadata": {
@@ -9,7 +10,7 @@
    "source": [
     "# Lab 4\n",
     "\n",
-    "[![image](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/giswqs/geosdemo/blob/master/docs/labs/lab4.ipynb)\n",
+    "[![image](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/rlape2/rocksnot/blob/main/labs/lab4.ipynb)\n",
     "\n",
     "## Submission instructions\n",
     "\n",
