--- a/labs/Lab6.ipynb
+++ b/labs/Lab6.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,23 +19,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'rocksnot' has no attribute 'Map'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m m \u001b[39m=\u001b[39m rocksnot\u001b[39m.\u001b[39;49mMap()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'rocksnot' has no attribute 'Map'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abb13312f9f947feb60d9a39bfa7dc11",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[36.0187, -83.8473], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'z…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "m = rocksnot.Map()"
+    "m = rocksnot.Map(center=(36.0187,-83.8473),zoom=8)\n",
+    "m"
    ]
   },
   {
@@ -43,7 +47,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.add_search_control()"
+   ]
   }
  ],
  "metadata": {
