--- a/labs/lab9.ipynb
+++ b/labs/lab9.ipynb
@@ -63,7 +63,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.15"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3c393c5b3b783acf7733e3ae542f3221696c0b774dc6e5a9d9a798dc42e732c3"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
