--- a/labs/test.ipynb
+++ b/labs/test.ipynb
@@ -24,7 +24,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geojson = 'data/map (3).geojson'"
+    "geojson = 'data/map (5).geojson'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rocksnot.convert_geojson_to_shapefile(geojson, 'data/knoxgeojson')"
    ]
   },
   {
@@ -33,18 +42,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rocksnot.convert_geojson_to_shapefile(geojson, 'geojsonknox')"
+    "shp = 'data/test2.shp'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "rocksnot.convert_shapefile_to_geojson(shp, 'data/convertshptest')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7311e875f1084559970795ead3cf56cc",
+       "model_id": "347970c6ff1149fa9e29890a44b24ae3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,11 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_shp('geojsonknox/geojsonknox.shp')"
+    "m.add_geojson('data/convertshptest')\n",
+    "\n",
+    "m.add_shp('data/knoxgeojson/knoxgeojson.shp')"
    ]
   }
  ],
